[gd_scene load_steps=6 format=3 uid="uid://c5724akbpects"]

[ext_resource type="Texture2D" uid="uid://dhgndwpp62y2w" path="res://Assets/UI/Title_BG.png" id="1_wfjbi"]
[ext_resource type="Texture2D" uid="uid://c1wr7cbdyvpqs" path="res://Assets/UI/Title.png" id="2_rv18j"]
[ext_resource type="Script" path="res://Scripts/Worlds/title_screen.gd" id="3_d4y5d"]
[ext_resource type="Theme" uid="uid://cbsdbgo4ukocd" path="res://Resources/UI.tres" id="4_c7wn2"]
[ext_resource type="Texture2D" uid="uid://bt5m2preplqng" path="res://Assets/UI/quit_disabled.png" id="5_hc7qd"]

[node name="TitleScreen" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BG" type="TextureRect" parent="CanvasLayer"]
offset_right = 576.0
offset_bottom = 324.0
texture = ExtResource("1_wfjbi")

[node name="Title" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -122.5
offset_top = 23.0
offset_right = 122.5
offset_bottom = 115.0
grow_horizontal = 2
texture = ExtResource("2_rv18j")

[node name="Buttons" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_d4y5d")

[node name="Play" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = -13.0
offset_right = 48.0
offset_bottom = 41.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_c7wn2")
text = "PLAY"

[node name="Quit" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 37.0
offset_right = 48.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_c7wn2")
text = "QUIT"

[node name="quit_disabled" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_left = 334.0
offset_top = 131.0
offset_right = 478.0
offset_bottom = 227.0
texture = ExtResource("5_hc7qd")

[connection signal="pressed" from="CanvasLayer/Buttons/Play" to="CanvasLayer/Buttons" method="_on_play_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Buttons/Quit" to="CanvasLayer/Buttons" method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Buttons/Quit" to="CanvasLayer/Buttons" method="_on_quit_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Buttons/Quit" to="CanvasLayer/Buttons" method="_on_quit_pressed"]
